--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
 	<meta charset="UTF-8">
 	<title>Landing page - Gulp</title>
 	
-	<!-- Font styles -->
-	<link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
-
 	<!-- Font awesome -->
 	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
@@ -32,10 +28,12 @@
 		</div>
 	</header>
 	
-	<section>
-		<p>Zostaw <span>sprawy finansowe</span>nam
-			<span>skup się na swoim biznesie</span>
-		</p>
+	<section id="form-section">
+		<div class="container">
+			<div class="form-section-right">
+				<h2 class="caption">Zostaw <span class="yellow">sprawy finansowe </span>nam <span class="yellow">skup się na swoim biznesie</span></h2>
+			</div>
+		</div>
 		<form method="post" action="//formspree.io/ewelina.goworko@gmail.com">
 				<input type="text" placeholder="Imię i nazwisko">
 				<input type="text" placeholder="E-mail">
