--- a/index.html
+++ b/index.html
@@ -32,15 +32,36 @@
 		<div class="container">
 			<div class="form-section-right">
 				<h2 class="caption">Zostaw <span class="yellow">sprawy finansowe </span>nam <span class="yellow">skup się na swoim biznesie</span></h2>
+				<form action="" id="main-form">
+					<fieldset>
+						<h3>Zostaw swoje dane, a my się z Tobą skontaktujemy</h3>
+						<input type="text" placeholder="Imię i nazwisko" id="form-name">
+						<input type="text" placeholder="E-mail" id="form-email">
+						<input type="text" placeholder="Telefon" id="form-phone">
+						<textarea placeholder="Wiadomość" id="form-message"></textarea>
+						<input type="submit" value="Wyślij">
+					</fieldset>
+				</form>
 			</div>
 		</div>
-		<form method="post" action="//formspree.io/ewelina.goworko@gmail.com">
-				<input type="text" placeholder="Imię i nazwisko">
-				<input type="text" placeholder="E-mail">
-				<input type="text" placeholder="Telefon">
-				<textarea placeholder="Wiadomość"></textarea>
-				<input type="submit" value="Wyślij" />
-			</form>
+		
 	</section>
+	
+	<footer>
+		<div class="container">
+			<div class="col-1-2 phone-footer">
+				<i class="fa fa-phone"></i>
+				<span class="phone">+22 000 123</span>
+			</div>
+			
+			<div class="col-1-2 phone-footer">
+				<i class="fa fa-envelope"></i>
+				<span class="mail">kursy@akademia108.pl</span>
+			</div>		
+		</div>
+		<div class="container">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem facilis, quam architecto ducimus delectus, tempore eum ipsa assumenda, possimus blanditiis quaerat dolorem! Soluta voluptate molestias eius nemo, tempore atque rem.</p>
+		</div>
+	</footer>
 </body>
 </html>
